--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,11 @@
     <string name="supply_values">Please supply values for all the fields!</string>
     <string name="name">Name</string>
     <string name="insert_name">Please insert your name</string>
+    <string name="input_water">Input water</string>
+    <string name="water_textview">Total so far:</string>
+    <string name="ml">ml</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="how_much_water_did_you_drink">How much water did you drink?</string>
+    <string name="search">Search</string>
 </resources>
