--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,10 +56,18 @@
     <string name="name">Name</string>
     <string name="insert_name">Please insert your name</string>
     <string name="input_water">Input water</string>
-    <string name="water_textview">Total so far:</string>
+    <string name="water_textview">Total so far: </string>
     <string name="ml">ml</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
     <string name="how_much_water_did_you_drink">How much water did you drink?</string>
     <string name="search">Search</string>
+    <string name="profile">Profile</string>
+    <string name="recipes">Recipes</string>
+    <string name="home">Home</string>
+    <string name="edit">Edit</string>
+    <string name="choose_photo_from">Choose photo from</string>
+    <string name="height">Height: </string>
+    <string name="current_weight">Current weight: </string>
+    <string name="goal_weight">Goal weight: </string>
 </resources>
