--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,5 +123,5 @@
     <string name="scan">Scan</string>
     <string name="water_history">Water History</string>
     <string name="sleep_history">Sleep History</string>
-    <string name="health_advice_statistics">For a healthy lifestyle, you should aim for a 45-30-25 carbs-protein fat ratio</string>
+    <string name="health_advice_statistics">For a healthy lifestyle, you should aim for a 45-30-25 carbs-protein-fat ratio</string>
 </resources>
